Revision history for Perl {{$dist->name}}

{{$NEXT}}

2.2900    2020-08-11 15:08:12 -0600
  - Require Alien::Build 2.29

2.1100    2020-03-09 03:11:09 -0600
  - Require Alien::Build 2.11

2.0401    2020-02-05 21:38:56 -0700
  - Require Alien::Build::MB 0.07

2.0400    2020-02-05 19:09:57 -0700
  - Require Alien::Build 2.04

2.0000    2020-02-02 06:28:08 -0700
  - Require Alien::Build 2.00

1.9800    2020-01-30 08:03:58 -0700
  - Require Alien::Build 1.98

1.9600    2020-01-28 23:04:31 -0700
  - Require Alien::Build 1.96

1.4100    2018-05-14 15:58:21 -0400
  - Require Alien::Build 1.41 Alien::Build::MB 0.05
  - Use new alienfile.org URL to fetch libdontpanic

1.2900    2017-10-30 10:01:57 -0400
  - Require Alien::Build 1.29 Alien::Build::MB 0.05
  - Skip FFI tests if no DLLs available

1.1400    2017-09-14 16:51:05 -0400
  - Require Alien::Build 1.14 Alien::Build::MB 0.05
  - Build FFI version of library

0.7500    2017-07-30 06:33:59 -0400
  - Require Alien::Build 0.75 Alien::Build::MB 0.03

0.3200    2017-03-29 14:39:20 -0400
  - Require Alien::Build 0.32 Alien::Build::MB 0.02

0.2100    2017-03-06 00:26:02 -0500
  - Require Alien::Build 0.21

0.1900    2017-03-02 06:41:27 +1100
  - Require Alien::Build 0.19

0.1100    2017-02-08 08:03:38 -0500
  - Require Alien::Build 0.11

0.0800    2017-02-04 11:50:13 -0500
  - Require Alien::Build 0.08

0.0500    2017-02-02 13:37:39 -0500
  - Fork of the original Acme::Alien::DontPanic that uses
    Alien::Build + Alien::Build::MB