@@ -4,7 +4,7 @@ set -ex
 
 cip exec mkdir -p /home/cip/tmp
 cip sudo apt-get update
-cip sudo apt-get -y install libffi-dev
+cip sudo apt-get -y install libffi-dev g++
 cip sudo bash -c "env $CIP_ENV curl https://alienfile.org/travis/install-system-dontpanic.sh | bash -x"
 cip sudo chown -R cip.cip /home/cip/dzil
 cip exec ./maint/cip-before-install-inside
