@@ -1,6 +1,7 @@
 Revision history for Perl {{$dist->name}}
 
 {{$NEXT}}
+  - Migrate inline tests from ABMB.
 
 2.2900    2020-08-11 15:08:12 -0600
   - Require Alien::Build 2.29
